<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activites.other.MainActivity">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:textColor="#636363"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <TextView
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#C175C7"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="квартиры"
                android:textColor="#C175C7"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"/>

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_flat_number"
                android:textSize="16sp"
                android:textColor="#1e1e1e">

            </androidx.constraintlayout.utils.widget.MotionLabel>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/editTextNumberFlat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:textColorHint="#808080"
                    android:paddingStart="10dp"
                    android:maxLength="3"/>

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_personal_account"
                android:textSize="16sp"
                android:textColor="#1e1e1e"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextPersonalAccount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:maxLength="20"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_total_area"
                android:textSize="16sp"
                android:textColor="#1e1e1e"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextTotalArea"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:maxLength="5"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:digits="0123456789,.$"
                    android:paddingStart="10dp"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_usable_area"
                android:textSize="16sp"
                android:textColor="#1e1e1e"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextUsableArea"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="7dp"
                    android:maxLength="5"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_entrance_number"
                android:textSize="16sp"
                android:textColor="#1e1e1e"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editEntranceNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:textSize="16sp"
                    android:maxLength="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_number_rooms"
                android:textSize="16sp"
                android:textColor="#1e1e1e"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editNumberOfRoom"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:maxLength="2"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_residents"
                android:textSize="16sp"
                android:textColor="#1e1e1e"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editNumberOfResidents"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:maxLength="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="36dp"
                android:text="@string/edit_text_owners"
                android:textSize="16sp"
                android:textColor="#1e1e1e"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editNumberOfOwners"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_marginEnd="32dp"
                    android:maxLength="2"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonWork"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_purple"
                android:text="Далее"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
