<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activites.other.MainActivity">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:textColor="#636363"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="#C175C7"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="квартиросъемщика"
            android:textColor="#C175C7"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"/>

        <androidx.constraintlayout.utils.widget.MotionLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingStart="40dp"
            android:text="@string/edit_text_full_name"
            android:textSize="18sp"
            android:textColor="#1e1e1e"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorHint="#808080" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.utils.widget.MotionLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingStart="40dp"
            android:text="@string/edit_text_date_of_registration"
            android:textSize="18sp"
            android:textColor="#1e1e1e"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_background"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="#808080" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.utils.widget.MotionLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingStart="40dp"
            android:text="@string/edit_text_number_of_family_members"
            android:textSize="18sp"
            android:textColor="#1e1e1e"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/editTextNumberOfFamilyMembers"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="10dp"
                android:maxLength="3"
                android:textColorHint="#808080" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.utils.widget.MotionLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingStart="40dp"
            android:text="@string/edit_text_phone_number"
            android:textSize="18sp"
            android:textColor="#1e1e1e"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:maxLength="11"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColorHint="#808080" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.utils.widget.MotionLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingStart="40dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="#1e1e1e"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:inputType="textWebEmailAddress"
                android:paddingStart="10dp"
                android:textColorHint="#808080" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonWork"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_purple"
            android:onClick="OnClickBtnBack"
            android:textColor="#ffffff"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>